# LeeErGou

./: .gitignore  CMakeLists.txt  InstallDependencies.cmake  LeeErGou.lnk  install.iss  readme.md  vcpkg.json
include/: Hello.h
include/core/: Core.h
include/glad/: glad.h
include/graphics/: Shader.h  Texture.h
resource/: appicon.rc
shader/: Shader.cpp  Shader.h
shader/GLSL/: first.frag  first.vert
src/: App.cpp  Hello.cpp  glad.c
src/graphics/: Shader.cpp  Textur.cpp
